Fixing alignments of position number

--- a/src/components/ReelRaceLeaderboard/LaurelPosition.scss
+++ b/src/components/ReelRaceLeaderboard/LaurelPosition.scss
@@ -1,9 +1,7 @@
 .c-laurel-position {
   &__text {
-    // left: 0;
     margin-left: 50%;
-    margin-top: 53%;
-    // top: 0;
+    margin-top: 50%;
     transform: translateX(-50%) translateY(-50%);
   }
 }
